--- a/src/app/layouts/navigation/navigation.component.html
+++ b/src/app/layouts/navigation/navigation.component.html
@@ -35,7 +35,7 @@
           <div class="p-x-32 p-y-16">
             <h6 class="f-s-16 f-w-600 m-0 mat-subtitle-1">User Profile</h6>
             <div class="d-flex align-items-center p-b-24 b-b-1 m-t-16">
-              <img [src]="user?.avatar" width="95" class="rounded-circle">
+              <img [src]="user?.avatar" width="75px" height="75px" class="rounded-circle">
               <div class="m-l-16">
                 <h6 class="f-s-14 f-w-600 m-0 mat-subtitle-1">{{ user?.name }}</h6>
                 <span class="f-s-14 d-block m-b-4">{{user?.role | uppercase}}</span>
