--- a/src/app/layouts/navigation/navigation.component.html
+++ b/src/app/layouts/navigation/navigation.component.html
@@ -49,7 +49,7 @@
                 <button mat-mini-fab="" class="text-primary bg-light-primary shadow-none rounded">
                   <img width="20" src="/assets/images/svgs/icon-account.svg">
                 </button>
-                <div class="m-l-16">
+                <div class="m-l-16" style="color: black;">
                   <h5 class="f-s-14 f-w-600 m-0">My Profile</h5>
                   <span>Account Settings</span>
                 </div>
