--- a/src/app/pages/account/subscription/subscription.component.html
+++ b/src/app/pages/account/subscription/subscription.component.html
@@ -127,7 +127,7 @@
                     </form>
 
                 </mat-card-content>
-                <div class="text-right p-24 p-t-0">
+                <div class="text-right p-24">
                     <button mat-flat-button color="primary" class="m-r-8" type="submit"
                         (click)="onSubmit()">Submit</button>
                     <button mat-stroked-button color="warn" class="m-r-8" type="button">Cancel</button>
