--- a/src/app/pages/trading/order-book/order-book.component.html
+++ b/src/app/pages/trading/order-book/order-book.component.html
@@ -234,9 +234,9 @@
         </table>
     </div>
     <!-- No Data Found Message -->
-    <div *ngIf="dataSource?.data?.length === 0" class="no-data-message">
+    <!-- <div *ngIf="dataSource?.data?.length === 0" class="no-data-message">
         <p>No data found.</p>
-    </div>
+    </div> -->
 </div>
 
 <!-- Pagination Below the Table -->
