--- a/src/app/pages/trading/position/position.component.html
+++ b/src/app/pages/trading/position/position.component.html
@@ -17,7 +17,7 @@
 
             <!-- Transaction Action Column -->
             <ng-container matColumnDef="transaction_action">
-                <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Transaction Action </th>
+                <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Type </th>
                 <td mat-cell *matCellDef="let element">
                     <span
                         [ngClass]="this.utilityService.getBadgeClass(element.transaction_action == 1 ? 'Buy' : 'Sell')"
@@ -29,26 +29,28 @@
 
             <!-- Transaction Quantity Column -->
             <ng-container matColumnDef="transaction_quantity">
-                <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Transaction Quantity </th>
+                <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Buy Quantity </th>
                 <td mat-cell *matCellDef="let element" class="mat-body-1 f-s-12"> {{element.transaction_quantity}} </td>
             </ng-container>
 
             <!-- Transaction Price Column -->
             <ng-container matColumnDef="transaction_price">
-                <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Transaction Price </th>
-                <td mat-cell *matCellDef="let element" class="mat-body-1 f-s-12"> {{element.transaction_price}} </td>
+                <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Buy Price </th>
+                <td mat-cell *matCellDef="let element" class="mat-body-1 f-s-12"> {{element.transaction_price|
+                    number:'1.2-2'}} </td>
             </ng-container>
 
             <!-- Square Off Quantity Column -->
             <ng-container matColumnDef="square_off_quantity">
-                <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Square Off Quantity </th>
+                <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Square-Off Quantity </th>
                 <td mat-cell *matCellDef="let element" class="mat-body-1 f-s-12"> {{element.square_off_quantity}} </td>
             </ng-container>
 
             <!-- Square Off Price Column -->
             <ng-container matColumnDef="square_off_price">
-                <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Square Off Price </th>
-                <td mat-cell *matCellDef="let element" class="mat-body-1 f-s-12"> {{element.square_off_price}} </td>
+                <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Square-Off Price </th>
+                <td mat-cell *matCellDef="let element" class="mat-body-1 f-s-12"> {{element.square_off_price|
+                    number:'1.2-2'}} </td>
             </ng-container>
 
             <!-- Unrealized Column -->
@@ -89,16 +91,14 @@
 
             <!-- Buy Response Update Time Column -->
             <ng-container matColumnDef="buy_response_update_time">
-                <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Buy Response Update Time
-                </th>
+                <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Buy Executed At </th>
                 <td mat-cell *matCellDef="let element" class="mat-body-1 f-s-12"> {{
                     this.utilityService.convertDateTime(element.buy_response_update_time) }} </td>
             </ng-container>
 
             <!-- Sell Response Update Time Column -->
             <ng-container matColumnDef="sell_response_update_time">
-                <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Sell Response Update Time
-                </th>
+                <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Sell Executed At </th>
                 <td mat-cell *matCellDef="let element" class="mat-body-1 f-s-12"> {{
                     this.utilityService.convertDateTime(element.sell_response_update_time) }} </td>
             </ng-container>
@@ -108,7 +108,7 @@
                 <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> LTP </th>
                 <td mat-cell *matCellDef="let element" class="mat-body-1 f-s-12"
                     [ngClass]="this.utilityService.getLtpClass(element.last_traded_price, element.transaction_price)">
-                    {{element.last_traded_price}}
+                    {{element.last_traded_price| number:'1.2-2'}}
                 </td>
             </ng-container>
 
@@ -125,14 +125,14 @@
 
             <!-- Transaction Date Column -->
             <ng-container matColumnDef="transaction_date">
-                <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Date </th>
+                <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Buy Date </th>
                 <td mat-cell *matCellDef="let element" class="mat-body-1 f-s-12"> {{
                     this.utilityService.convertDateTime(element.transaction_date) }} </td>
             </ng-container>
 
             <!-- Square Off Time Column -->
             <ng-container matColumnDef="square_off_time">
-                <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Square Off Time </th>
+                <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Square-Off Time </th>
                 <td mat-cell *matCellDef="let element" class="mat-body-1 f-s-12"> {{
                     this.utilityService.convertDateTime(element.square_off_time) }} </td>
             </ng-container>
@@ -226,9 +226,9 @@
         </table>
     </div>
     <!-- No Data Found Message -->
-    <div *ngIf="dataSource?.data?.length === 0" class="no-data-message">
+    <!-- <div *ngIf="dataSource?.data?.length === 0" class="no-data-message">
         <p>No data found.</p>
-    </div>
+    </div> -->
 </div>
 
 <!-- Pagination Below the Table -->
