--- a/src/app/components/position-table/position-table.component.html
+++ b/src/app/components/position-table/position-table.component.html
@@ -1,5 +1,17 @@
 <mat-progress-bar *ngIf="isLoading" mode="indeterminate"></mat-progress-bar>
-<table mat-table [dataSource]="dataSource" class="w-100">
+
+<!-- Skeleton Loader -->
+<div *ngIf="isLoading" class="skeleton-loader">
+   <div class="skeleton-row" *ngFor="let i of [1,2,3,4,5]">
+      <div class="skeleton-cell" style="width: 20%;"></div>
+      <div class="skeleton-cell" style="width: 20%;"></div>
+      <div class="skeleton-cell" style="width: 20%;"></div>
+      <div class="skeleton-cell" style="width: 20%;"></div>
+      <div class="skeleton-cell" style="width: 20%;"></div>
+   </div>
+</div>
+
+<table mat-table [dataSource]="dataSource" class="w-100" *ngIf="!isLoading">
    <!-- Position Column -->
    <ng-container matColumnDef="symbol">
       <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">
@@ -37,31 +49,6 @@
       </th>
       <td mat-cell *matCellDef="let element">
          {{element.unrealized | number:'1.2-2'}}
-         <!-- <ng-template [ngIf]="element.priority == 'low'">
-             <span class="bg-light-accent text-accent rounded f-w-600 p-6 p-y-4 f-s-12">
-                {{ element.priority | titlecase }}
-             </span>
-          </ng-template>
-          <ng-template [ngIf]="element.priority == 'medium'">
-             <span class="bg-light-primary text-primary rounded f-w-600 p-6 p-y-4 f-s-12">
-                {{ element.priority | titlecase }}
-             </span>
-          </ng-template>
-          <ng-template [ngIf]="element.priority == 'high'">
-             <span class="bg-light-warning text-warning rounded f-w-600 p-6 p-y-4 f-s-12">
-                {{ element.priority | titlecase }}
-             </span>
-          </ng-template>
-          <ng-template [ngIf]="element.priority == 'critical'">
-             <span class="bg-light-error text-error rounded f-w-600 p-6 p-y-4 f-s-12">
-                {{ element.priority | titlecase }}
-             </span>
-          </ng-template>
-          <ng-template [ngIf]="element.priority == 'moderate'">
-             <span class="bg-light-success text-success rounded f-w-600 p-6 p-y-4 f-s-12">
-                {{ element.priority | titlecase }}
-             </span>
-          </ng-template> -->
       </td>
    </ng-container>
 
@@ -87,7 +74,8 @@
    <tr mat-header-row *matHeaderRowDef="displayedColumns;sticky: true"></tr>
    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
 </table>
+
 <!-- No Data Found Message -->
-<div *ngIf="dataSource?.data?.length === 0" class="no-data-message">
+<div *ngIf="dataSource?.data?.length === 0 && !isLoading" class="no-data-message">
    <p>No data found.</p>
 </div>
